# datum-tree

./: .gitignore  LICENSE  Makefile  datum-data-tree.cabal  datum-data.cabal  datum-tree.cabal  schema.hs
Datum/: Console.hs
Datum/Console/: Check.hs  Dump.hs  Save.hs
Datum/Data/: List.hs  Tree.hs
Datum/Data/Tree/: Builder.hs  Check.hs  Chrome.hs  Codec.hs  Compounds.hs  Exp.hs  Operator.hs  Operators.hs  SExp.hs
Datum/Data/Tree/Check/: Error.hs
Datum/Data/Tree/Codec/: Chrome.hs  Matryo.hs
Datum/Data/Tree/Codec/Matryo/: Decode.hs  Encode.hs  Lexer.hs
Datum/Data/Tree/Operator/: Cast.hs  Elements.hs  Extract.hs  Fields.hs  Filter.hs  Flatten.hs  Forests.hs  Gather.hs  Group.hs  Limit.hs  Map.hs  Meta.hs  Path.hs  Project.hs  Reduce.hs  Slice.hs  Strip.hs  Traverse.hs  Trees.hs
Datum/Data/Tree/Pretty/: Chrome.hs  Symbolic.hs
Datum/Data/Tree/SExp/: Pretty.hs
Datum/Example/: Shares.hs
Datum/Model/: Operators.hs
Datum/Model/TreeSplit/: Type.hs
Datum/Model/TreeTree/: ExampleShares.hs
Datum/Schema/: Builder.hs  Check.hs  ExampleShares.hs  ExampleStock.hs  Exp.hs  Operator.hs  Pretty.hs  Type.hs
Datum/Script/: Eval.hs
Datum/Script/Core/: Exp.hs
Datum/Script/Core/Exp/: Bind.hs  Compounds.hs  Generic.hs  Predicates.hs  Prim.hs
Datum/Script/Eval/: Env.hs  Error.hs  Pretty.hs  Prim.hs  State.hs  Value.hs
Datum/Script/Exp/: Compounds.hs  Core.hs  Generic.hs  Prim.hs
Datum/Script/Source/: Exp.hs  Lexer.hs  Load.hs  Parser.hs  Token.hs
Datum/Script/Source/Exp/: Compounds.hs  Generic.hs
Datum/Script/Source/Transform/: Defix.hs  ToCore.hs
Datum/Script/Source/Transform/Defix/: Error.hs  FixTable.hs
Datum/Test/: Shares.hs
broken/: Main.us
demo/: Companies.hs  Stock.hs  identity.datum
demo/data/: ASXListedCompanies-cut.csv  stock.tree
doc/: Matryo.md  Script.md
doc/syntax/: Matryoshka Script.tmLanguage
example/matryo/: 01-Companies.matryo
example/table/: Planets.ut
script/: console
test/: ExampleStock.hs  Stock.datum-sexp
test/00-Demo/01-Haskell/: Stock.hs
test/00-Demo/02-Script/: 01-Planets.us
test/01-Core/: 01-Identity.us
test/02-Tree/: 01-Identity.us  02-Sample.us  03-Rename.us  04-GroupTrans.us  04-OnGroup.us  04-Transform.us  05-Gather.us
test/data/: ASXListedCompanies-cut.csv  ASXListedCompanies.csv
test/data/csv/: SolarSystem.csv
test/data/matryo/: Companies.matryo
test/data/table/: Planets.ut
test/data/tsv/quotes/: ANZ.tsv  CBA.tsv  NAB.tsv  WBC.tsv
test/driver/: Main.hs
test/driver/Job/: Create.hs  Exec.hs
test/output/: .readme
test/tests/00-Demo/01-Planets/: Main.stdout.check  Main.us
test/tests/00-Demo/02-Companies/: Main.stdout.check  Main.us
test/tests/00-Demo/03-Quotes/: Main.stdout.check  Main.us
test/tests/00-Demo/04-Features/: Main.stdout.check  Main.us
test/tests/01-Core/00-Literal/: Main.stdout.check  Main.us  Skip.us
test/tests/01-Core/01-Identity/: Main.us
test/tests/01-Core/02-Twice/: Main.us
test/tests/01-Core/10-Records/: Main.stdout.check  Main.us
test/tests/02-Operator/00-Print/: Main.stdout.check  Main.us
test/tests/02-Operator/01-Identity/: Main.stdout.check  Main.us
test/tests/02-Operator/01-Load/01-csv/: Main.stdout.check  Main.us
test/tests/02-Operator/01-Load/02-matryo/: Main.stdout.check
test/tests/02-Operator/01-Load/02-matryo/01-Valid/: Main.us
test/tests/02-Operator/01-Load/02-matryo/02-ErrorAtom/: Companies-ErrorAtom.matryo  Main.stderr.check  Main.us
test/tests/02-Operator/01-Load/02-matryo/11-ErrorArityDim/: Main.stderr.check  Main.us
test/tests/02-Operator/01-Load/02-matryo/12-ErrorArityTuple/: Main.stderr.check  Main.us
test/tests/02-Operator/01-Load/02-tsv/: Main.stdout.check  Main.us
test/tests/02-Operator/02-Read/01-tsv/: Main.stdout.check  Main.us
test/tests/02-Operator/02-Sample/: Main.stdout.check  Main.us
test/tests/02-Operator/03-Rename/: Main.stdout.check  Main.us
test/tests/02-Operator/04-Transform/: Main.stdout.check  Main.us
test/tests/02-Operator/05-Gather/: Main.stdout.check  Main.us
test/tests/02-Operator/06-Group/01-One/: Main.stdout.check  Main.us
test/tests/02-Operator/06-Group/02-Two/: Main.stdout.check  Main.us
test/tests/02-Operator/10-Sample/: Main.stdout.check  Main.us
test/tests/02-Operator/20-Rename/: Main.stdout.check  Main.us
test/tests/02-Operator/20-RenameFields/: Main.us
test/tests/02-Operator/21-Permute/01-Reorder/: Main.stdout.check  Main.us
test/tests/02-Operator/21-Permute/02-Drop/: Main.stdout.check  Main.us
test/tests/02-Operator/21-Permute/03-Copy/: Main.stdout.check  Main.us
test/tests/02-Operator/21-PermuteFields/01-Reorder/: Main.us
test/tests/02-Operator/21-PermuteFields/02-Drop/: Main.us
test/tests/02-Operator/22-RenameDimension/01-Single/: Main.us
test/tests/02-Operator/22-RenameDimension/02-Multiple/: Main.stdout.check  Main.us
test/tests/02-Operator/30-Group/01-One/: Main.stdout.check  Main.us
test/tests/02-Operator/30-Group/02-Two/: Main.stdout.check  Main.us
test/tests/02-Operator/30-Group/10-Sampled/: Main.stdout.check  Main.us
test/tests/02-Operator/30-Group/11-Permuted/: Main.stdout.check  Main.us
test/tests/02-Operator/31-Gather/: Main.stdout.check  Main.us
test/tests/02-Operator/32-Flatten/: Main.stdout.check  Main.us
test/tests/02-Operator/40-Sort/01-One/: Main.stdout.check  Main.us
test/tests/02-Operator/40-Sort/02-Two/: Main.stdout.check  Main.us
test/tests/02-Operator/40-Transform/: Main.us
test/tests/02-Operator/50-Append/: Main.stdout.check  Main.us
test/tests/02-Operator/51-Concat/: Main.stdout.check  Main.us
test/tests/02-Operator/60-Transform/: Main.stdout.check  Main.us
test/tests/02-Operator/70-Count/: Main.stdout.check  Main.us
test/tests/02-Operator/71-Drop/: Main.stdout.check  Main.us
test/tests/02-Operator/72-Dup/: Main.stdout.check  Main.us
test/tests/02-Operator/73-Push/: Main.stdout.check  Main.us
test/tests/02-Operator/74-Filter/: Main.stdout.check  Main.us
test/tests/02-Operator/90-Args/: Skip.us
tools/tree/: Config.hs  Load.hs  Main.hs  Pervasive.hs
(+25 files in other folders)
