Name:           datum-data-tree
Version:        1.0.0.0
License:        AllRightsReserved
License-file:   LICENSE
Author:         Vergo
Maintainer:     Ben Lippmeier <benl@ouroborus.net>
Build-Type:     Simple
Cabal-Version:  >=1.8
Stability:      experimental
Bug-reports:    benl@ouroborus.net
Description:    Datum Data Structures
Synopsis:       Datum Data Structures


Library
 build-depends:
        base            == 4.8.*,
        mtl             >= 2.2.1        && < 2.3,
        wl-pprint       >= 1.2          && < 1.3


 hs-source-dirs:
        .

 exposed-modules:
        Datum.Console

        Datum.Data.Tree
        Datum.Data.Tree.Exp
        Datum.Data.Tree.Check
        Datum.Data.Tree.Chrome
        Datum.Data.Tree.Compounds
        Datum.Data.Tree.Operators
        Datum.Data.Tree.SExp


 other-modules:
        Datum.Data.Tree.SExp.Pretty
        Datum.Data.Tree.Check.Error
        
 extensions:
        FlexibleInstances
        ParallelListComp
        FlexibleContexts
        TypeFamilies
        DataKinds

 ghc-options:
        -Wall -fno-warn-missing-signatures -Werror
