Name:           datum-data
Version:        1.0.0.0
License:        AllRightsReserved
License-file:   LICENSE
Author:         Vergo
Maintainer:     Ben Lippmeier <benl@ouroborus.net>
Build-Type:     Simple
Cabal-Version:  >=1.8
Stability:      experimental
Bug-reports:    benl@ouroborus.net
Description:    Datum Data Structures
Synopsis:       Datum Data Structures


Library
 build-depends:
        base            == 4.8.*,
        mtl             >= 2.2.1        && < 2.3,
        wl-pprint       >= 1.2          && < 1.3


 hs-source-dirs:
        .

 exposed-modules:
        Datum.Data.Tree
        Datum.Data.Tree.Exp
        Datum.Data.Tree.Check
        Datum.Data.Tree.Operator
        Datum.Data.Tree.SExp
        Datum.Data.Tree.Pretty.Chrome

 other-modules:
        Datum.Data.Tree.SExp.Pretty
        Datum.Data.Tree.Check.Error
        
 extensions:
        FlexibleInstances
        ParallelListComp
        FlexibleContexts
        TypeFamilies

 ghc-options:
        -Wall -fno-warn-missing-signatures -Werror
